--- a/Lenos/Views/_ViewImports.cshtml
+++ b/Lenos/Views/_ViewImports.cshtml
@@ -1,1 +1,6 @@
-﻿
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Lenos.Models;
+@using Lenos.Services;
+@using Lenos.ViewModels.Basket;
+@using Lenos.ViewModels.Home;
+@using Lenos.ViewModels.Shop;
